--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
 	<groupId>com.ganeshkumar.personal</groupId>
 	<artifactId>console-drawing-app</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 
 	<name>console-drawing-app</name>
 	<description>A simple console-drawing Application</description>
